--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,14 @@
   <body>
 
     {%- include header.html -%}
-
+    <ul>
+        {% for post in site.posts %}
+          <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+      
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
